# AudioFilterLib

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  OPTIMIZATION.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  REPO_INIT_COMMANDS.txt  SETUP.sh  vcpkg.json
.github/workflows/: ci.yml
examples/: CMakeLists.txt  benchmark.cpp  wav_filter_example.cpp
include/: audio_buffer.h  biquad_filter.h  filter_base.h  fir_designer.h  iir_designer.h  wav_file.h
src/: audio_buffer.cpp  biquad_filter.cpp  filter_base.cpp  fir_designer.cpp  iir_designer.cpp  wav_file.cpp
tests/: CMakeLists.txt  filter_tests.cpp
